--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-this is a html file, Hello!
-adding this just to see the git log reaction
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
